--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,8 @@
   ],
   "type": "symfony-bundle",
   "require": {
-    "crewlabs/unsplash": "^2.2",
-    "symfony/orm-pack": "^1.0",
-    "sensio/framework-extra-bundle": "^5.1"
+    "crewlabs/unsplash": "^3.2",
+    "symfony/orm-pack": "^2"
   },
   "license": "MIT",
   "authors": [
