--- a/assets/package.json
+++ b/assets/package.json
@@ -3,8 +3,8 @@
     "version": "1.0.0",
     "symfony": {
         "controllers": {
-            "slug": {
-                "main": "dist/mozaic_controller.js",
+            "puzzle": {
+                "main": "dist/controller.js",
                 "fetch": "eager",
                 "enabled": true,
                 "autoimport": {
@@ -13,12 +13,10 @@
             }
         },
         "importmap": {
-            "@hotwired/stimulus": "^3.0.0",
-            "slugify": "^1.6.5"
+            "@hotwired/stimulus": "^3.0.0"
         }
     },
     "peerDependencies": {
-        "@hotwired/stimulus": "^3.0.0",
-        "slugify": "^1.6.5"
+        "@hotwired/stimulus": "^3.0.0"
     }
 }
