--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,12 @@
     "type": "symfony-bundle",
     "require": {
         "knplabs/knp-paginator-bundle": "^6.9",
-        "symfony/routing": "6.4.*",
+        "symfony/routing": "6.*|7.*|8.*",
         "symfony/orm-pack": "^2",
-        "symfony/security-bundle": "6.4.*",
-        "symfony/translation": "6.4.*",
-        "symfony/twig-bundle": "6.4.*",
-        "symfony/uid": "6.4.*",
+        "symfony/security-bundle": "6.*|7.*|8.*",
+        "symfony/translation": "6.*|7.*|8.*",
+        "symfony/twig-bundle": "6.*|7.*|8.*",
+        "symfony/uid": "6.*|7.*|8.*",
         "unsplash/unsplash": "^3.2"
     },
     "license": "MIT",
