--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=../../../../symfony/dependency-injection/Loader/schema/services.schema.json
 services:
     _defaults:
         autowire: true
